--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,16 @@
             android:exported="true" >
 
         </activity>
+        <activity
+            android:name=".presentation.MyReviewActivity"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".presentation.MyPostActivity"
+            android:exported="true" >
+
+        </activity>
 
     </application>
 
