--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
-            android:name=".ui.community.PostDetailActivity"
+            android:name=".ui.community.postDetail.PostDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.onboarding.OnBodingActivity"
