--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
+            android:name=".ui.community.addPost.AddPostActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.community.postDetail.PostDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.onboarding.OnBodingActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
