--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
+            android:name=".ui.community.addPlace.AddPlaceActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.community.addPost.AddPostActivity"
             android:exported="false" />
         <activity
