--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ui.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,13 +16,13 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
-            android:name=".ui.community.addPlace.AddPlaceActivity"
+            android:name=".ui.community.screen.addPlace.AddPlaceActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.community.addPost.AddPostActivity"
+            android:name=".ui.community.screen.addPost.AddPostActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.community.postDetail.PostDetailActivity"
+            android:name=".ui.community.screen.postDetail.PostDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.onboarding.OnBodingActivity"
