--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,12 +4,13 @@ generativeai = "0.9.0"
 gson = "2.10.1"
 hiltAndroid = "2.52"
 coil = "2.7.0"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
+ksp = "2.0.0-1.0.23"
 loggingInterceptor = "4.12.0"
 material = "1.12.0"
 activity = "1.9.1"
@@ -52,4 +53,5 @@ v2-user = { module = "com.kakao.sdk:v2-user", version.ref = "v2User" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
