--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name=".ui.MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:usesCleartextTraffic="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.home.detail.DetailActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.community.screen.addPlace.AddPlaceActivity"
             android:exported="false" />
