--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,10 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      
+      - name: Set environment variables
+        env:
+          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+      
       - name: Build with Gradle
         run: ./gradlew build
