--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
-            android:name=".ui.home.detail.DetailActivity"
+            android:name=".ui.home.detail.PlaceDetailActivity"
             android:exported="false" />
         <activity
             android:name=".ui.community.screen.addPlace.AddPlaceActivity"
