--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
+            android:name=".ui.community.screen.searchPlace.SearchPlaceActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.community.screen.addPlace.AddPlaceActivity"
             android:exported="false" />
         <activity
