--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,10 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.0"
+generativeai = "0.9.0"
+gson = "2.10.1"
+hiltAndroid = "2.52"
+coil = "2.7.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
