--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.GangwonHyuil"
         tools:targetApi="31">
         <activity
+            android:name=".ui.review.ReviewWriteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.review.ReviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.community.screen.searchPlaceDetail.SearchPlaceDetailActivity"
             android:exported="false" />
         <activity
@@ -36,15 +42,17 @@
             android:exported="false" />
         <activity
             android:name=".ui.onboarding.OnBodingActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
