Feat: ProfileFragment에 관련된 api 연결 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,12 @@
                     android:scheme="kakao83ed3419c90df461922f69facba26d20" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.profile.screen.myReviews.MyReviewsActivity"
+            android:exported="true"/>
+        <activity android:name=".ui.profile.screen.myPosts.MyPostsActivity"
+            android:exported="true"/>
+        <activity android:name=".ui.profile.screen.setting.SettingActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
